--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,15 @@
 
         <name>my-web-application</name>
 
-    <description>Maven Web Application for Java Project</description>
+    <description>Maven Web Application for Java Project</descrihttp://18.140.69.249:9000/ption>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <sonar.host.url>http://18.140.69.249:9000/</sonar.host.url>
+        <sonar.login>squ_efc12cd7851db032a28486daab2f5d2541664617</sonar.login>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-                <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     </properties>
 
