--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
     <build>
             <finalName>my-web-application</finalName>
         <plugins>
+            <! -- Sonar Scanner Plugin -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version> <!-- Example of a compatible version -->
+            </plugin>
+
             <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
